--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -19,6 +19,7 @@
  @import "_modules/header-footer";
  @import "_modules/landing";
  @import "_modules/booking";
+ @import "_modules/modal";
 
  @import "_pages/home";
  @import "_pages/about";
