--- a/app/assets/sass/_modules/_landing.scss
+++ b/app/assets/sass/_modules/_landing.scss
@@ -55,15 +55,20 @@
     display: block;
     position: relative;
     z-index: 8;
-
+    background-color: rgba(0,0,0,0.5);
+    @include transition(all 0.5s ease-in);
+    &:hover {
+      @include transition(all 0.5s ease-out);
+      background-color: rgba(0,0,0,0.0);
+      h2, p {
+        opacity: 1 !important;
+      }
+    }
     > a {
       @include size(100%);
       display: block;
-      &:hover {
-        img {
-          opacity: 1;
-        }
-      }
+      position: absolute;
+      z-index: 9;
     }
     .wrapper {
       width: 50%;
@@ -78,6 +83,8 @@
     h2, p {
       width: 100%;
       text-align: center;
+      @include transition(all 0.5s ease-in);
+      opacity: 0.5 !important;
     }
     h2 {
       font-size: 4.5rem;
