--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -917,6 +917,10 @@ small {
   background-color: #d2bb71 !important;
 }
 
+img {
+  min-width: 100%;
+}
+
 #loader {
   height: 100vh;
   width: 100vw;
@@ -1086,14 +1090,22 @@ footer div ul li a img {
   display: block;
   position: relative;
   z-index: 8;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: all 0.5s ease-in;
+}
+.villas:not(.feed) .landing .half:hover {
+  transition: all 0.5s ease-out;
+  background-color: transparent;
+}
+.villas:not(.feed) .landing .half:hover h2, .villas:not(.feed) .landing .half:hover p {
+  opacity: 1 !important;
 }
 .villas:not(.feed) .landing .half > a {
   height: 100%;
   width: 100%;
   display: block;
-}
-.villas:not(.feed) .landing .half > a:hover img {
-  opacity: 1;
+  position: absolute;
+  z-index: 9;
 }
 .villas:not(.feed) .landing .half .wrapper {
   width: 50%;
@@ -1109,6 +1121,8 @@ footer div ul li a img {
 .villas:not(.feed) .landing .half h2, .villas:not(.feed) .landing .half p {
   width: 100%;
   text-align: center;
+  transition: all 0.5s ease-in;
+  opacity: 0.5 !important;
 }
 .villas:not(.feed) .landing .half h2 {
   font-size: 4.5rem;
