--- a/app/assets/sass/_pages/_home.scss
+++ b/app/assets/sass/_pages/_home.scss
@@ -3,10 +3,17 @@
     h1 {
       @include span-columns(6);
       @include shift(3);
+      @include media($mobile) {
+        @include span-columns(10);
+        @include shift(1);
+      }
     }
   }
   .main {
     padding-top: 15rem;
+    @include media($mobile) {
+      padding-top: 5rem;
+    }
     section {
       &:first-child {
         padding-bottom: 15rem;
@@ -17,20 +24,31 @@
         }
         .infos {
           padding-top: 14.4rem;
+          @include media($mobile) {
+            padding-top: 0;
+            @include span-columns(12);
+            margin-bottom: 3rem;
+          }
         }
         .images {
           padding-left: 5rem;
+          @include media($mobile) {
+            padding-left: 0;
+            @include span-columns(12);
+          }
           figure {
             height: 30rem;
             overflow: hidden;
             position: relative;
             margin-left: 0;
-
+            @include media($mobile) {
+              height: 18rem;
+            }
 
             img {
               min-width: 100%;
               object-fit: cover;
-              
+
             }
             a {
               @include size(100%);
@@ -75,10 +93,18 @@
         > .six {
           @include shift(3);
           text-align: center;
+          @include media($mobile) {
+            @include span-columns(10);
+            @include shift(1);
+          }
           h2 {
             @include span-columns(6);
             @include shift(3);
             float: none;
+            @include media($mobile) {
+              @include span-columns(10);
+              @include shift(1);
+            }
           }
           p {
             margin: 8rem 0;
@@ -92,6 +118,9 @@
           img {
             min-width: 100%;
             object-fit: cover;
+          }
+          @include media($mobile) {
+            width: 100%;
           }
           figcaption {
             height: 12rem;
@@ -140,6 +169,17 @@
                 }
               }
             }
+            @include media($mobile) {
+              figcaption {
+                @include transform(translateX(0));
+                @include transition(all 0.25s ease-out);
+                span {
+                  right: -2.5rem;
+                  opacity: 1;
+                  @include transition(all 0.25s 0.2s ease-out);
+                }
+              }
+            }
           }
           &:last-child {
             figcaption {
@@ -151,6 +191,17 @@
               }
             }
             &:hover {
+              figcaption {
+                @include transform(translateX(0));
+                @include transition(all 0.25s ease-out);
+                span {
+                  left: -2.5rem;
+                  opacity: 1;
+                  @include transition(all 0.25s 0.2s ease-out);
+                }
+              }
+            }
+            @include media($mobile) {
               figcaption {
                 @include transform(translateX(0));
                 @include transition(all 0.25s ease-out);
