--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -1048,11 +1048,6 @@ footer div ul li a img {
   width: auto;
   object-fit: cover;
   position: fixed;
-  margin: auto;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   z-index: 5;
   max-width: none;
   max-height: 100vh;
@@ -1079,6 +1074,18 @@ footer div ul li a img {
   clear: both;
   content: "";
   display: table;
+}
+@media screen and (max-width: 480px) {
+  .landing .wrapper h1 {
+    float: left;
+    display: block;
+    margin-right: 2.3576515979%;
+    width: 74.4105871005%;
+    margin-left: 8.5298042998%;
+  }
+  .landing .wrapper h1:last-child {
+    margin-right: 0;
+  }
 }
 .landing .scrolldown {
   font-size: 14px;
@@ -1765,9 +1772,56 @@ footer div ul li a img {
 #content.about section.history .banner img {
   width: 100%;
   object-fit: cover;
+  min-height: 100%;
 }
 #content.about section.history .container {
   padding-top: 10rem;
+}
+@media screen and (min-width: 480px) {
+  #content.about section.history .container .infos {
+    float: left;
+    display: block;
+    margin-right: 2.3576515979%;
+    width: 40.2913699012%;
+  }
+  #content.about section.history .container .infos:last-child {
+    margin-right: 0;
+  }
+}
+@media screen and (max-width: 480px) {
+  #content.about section.history .container .infos {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    float: left;
+    display: block;
+    margin-right: 2.3576515979%;
+    width: 100%;
+  }
+  #content.about section.history .container .infos:last-child {
+    margin-right: 0;
+  }
+}
+@media screen and (min-width: 480px) {
+  #content.about section.history .container .images {
+    float: left;
+    display: block;
+    margin-right: 2.3576515979%;
+    width: 57.3509785009%;
+  }
+  #content.about section.history .container .images:last-child {
+    margin-right: 0;
+  }
+}
+@media screen and (max-width: 480px) {
+  #content.about section.history .container .images {
+    float: left;
+    display: block;
+    margin-right: 2.3576515979%;
+    width: 100%;
+  }
+  #content.about section.history .container .images:last-child {
+    margin-right: 0;
+  }
 }
 #content.about section.history .container:nth-child(2) .infos {
   padding-left: 9.5rem;
@@ -1777,13 +1831,14 @@ footer div ul li a img {
 }
 #content.about section.history .container h3 {
   font-size: 36px;
-  line-height: 10px;
+  line-height: 45px;
   font-size: 3.6rem;
-  line-height: 1rem;
+  line-height: 4.5rem;
   margin-bottom: 6rem;
 }
 #content.about section.history .container .btn {
   margin-top: 3.5rem;
+  margin-bottom: 3.5rem;
 }
 #content.about section.charities {
   height: 43rem;
@@ -1799,6 +1854,7 @@ footer div ul li a img {
 #content.about section.charities img {
   width: 100%;
   object-fit: cover;
+  min-height: 100%;
 }
 #content.about section.charities .container {
   position: relative;
@@ -1812,6 +1868,18 @@ footer div ul li a img {
   top: 18rem;
   left: 0;
 }
+@media screen and (max-width: 480px) {
+  #content.about section.charities .container div.title {
+    float: left;
+    display: block;
+    margin-right: 2.3576515979%;
+    width: 100%;
+    top: 3rem;
+  }
+  #content.about section.charities .container div.title:last-child {
+    margin-right: 0;
+  }
+}
 #content.about section.charities .container div.text {
   top: 15rem;
   right: 0;
@@ -1820,6 +1888,17 @@ footer div ul li a img {
   font-size: 1.65rem;
   line-height: 2.5rem;
   color: white;
+}
+@media screen and (max-width: 480px) {
+  #content.about section.charities .container div.text {
+    float: left;
+    display: block;
+    margin-right: 2.3576515979%;
+    width: 100%;
+  }
+  #content.about section.charities .container div.text:last-child {
+    margin-right: 0;
+  }
 }
 
 #content.services .main {
