--- a/app/assets/sass/_pages/_special-offers.scss
+++ b/app/assets/sass/_pages/_special-offers.scss
@@ -9,13 +9,28 @@
     .modal-outer {
       margin: 10rem auto;
     }
+    .text {
+      @include media($desktop) {
+        @include span-columns(6);
+      }
+      @include media($mobile) {
+        @include span-columns(12);
+      }
+    }
   }
   section.engagements {
     h2, p {
-      @include span-columns(6);
-      @include shift(3);
+      @include media($desktop) {
+        @include span-columns(6);
+        @include shift(3);
+        margin-bottom: 4.5rem;
+      }
+      @include media($mobile) {
+        @include span-columns(12);
+        @include shift(0);
+      }
+
       text-align: center;
-      margin-bottom: 4.5rem;
       float: none;
     }
     .assets {
@@ -30,16 +45,26 @@
     padding: 10rem 0;
     border-bottom: 1px solid rgba(0,0,0,0.1);
     @extend .fill-remainder;
-    > .six:first-child {
-      float: left;
-      position: absolute;top: 50%;
-      @extend .vertical-center;
+    .infos, .images {
+      @include media($desktop) {
+        @include span-columns(6);
+      }
+      @include media($mobile) {
+        @include span-columns(12);
+      }
+    }
+    .infos {
+      @include media($desktop) {
+        float: left;
+        position: absolute;top: 50%;
+        @include transform(translateY(-50%));
+      }
       h2 {
         margin-top: 0;
         margin-bottom: 4.5rem;
       }
     }
-    > .six:nth-child(2) {
+    .images {
       float: right;
       .row {
         margin-bottom: 1.2rem;
@@ -51,10 +76,25 @@
     position: relative;
     @extend .fill-remainder;
     padding: 10rem 0;
-    > .six:nth-child(2) {
-      position: absolute;top: 50%;
-      right: 0;
-      @extend .vertical-center;
+
+    .infos, .image {
+      @include media($desktop) {
+        @include span-columns(6);
+      }
+      @include media($mobile) {
+        @include span-columns(12);
+      }
+    }
+
+    .infos {
+      @include media($desktop) {
+        position: absolute;top: 50%;
+        @include transform(translateY(-50%));
+        right: 0;
+      }
+      @include media($mobile) {
+        margin-top: 4rem;
+      }
       h2 {
         margin-top: 0;
         margin-bottom: 4.5rem;
