--- a/app/assets/sass/_modules/_header-footer.scss
+++ b/app/assets/sass/_modules/_header-footer.scss
@@ -7,6 +7,7 @@ header {
   width: 100%;
   top:0;
 
+
   a.logo {
     display: inline-block;
     float: left;
@@ -45,6 +46,7 @@ header {
     z-index: 9999;
     padding: 3rem 0;
     background-color: white;
+    box-shadow: 0px 2px 5px rgba(0,0,0,0.2);
     a.logo{color: $dark;}
     nav a {color: $dark;}
   }
