--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -980,6 +980,7 @@ header.white {
   z-index: 9999;
   padding: 3rem 0;
   background-color: white;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
 }
 header.white a.logo {
   color: #293443;
