--- a/app/assets/sass/_pages/_villas.scss
+++ b/app/assets/sass/_pages/_villas.scss
@@ -20,6 +20,9 @@
       }
       img {
         opacity: 0.5;
+        object-fit: cover;
+        min-height: 100%;
+
         @include media($mobile) {
           height: 100%;
           max-width: none;
@@ -123,6 +126,17 @@
       h2 {
         margin-top: 0.5rem;
         margin-bottom: 4.5rem;
+        position: relative;
+
+        &:after {
+          content: " ";
+          position: absolute;
+          width: 2rem;
+          height: 1px;
+          background: $grey;
+          top: 6.3rem;
+          left: 0;
+        }
       }
       ul.slider-nav {
         list-style: none;
