--- a/app/assets/sass/_modules/_landing.scss
+++ b/app/assets/sass/_modules/_landing.scss
@@ -51,6 +51,10 @@
   }
 }
 .villas:not(.feed) .landing {
+  > img {
+    max-width: 100%;
+    min-height: 100vh;
+  }
   .half {
     min-height: 100vh;
     width: 50%;
@@ -74,13 +78,13 @@
       z-index: 9;
     }
     .wrapper {
-      width: 50%;
+      width: 100%;
       @include media($mobile) {
-        top: 35%;
+        top: 50%;
         width: 100%;
       }
     }
-    &:nth-child(2) {
+    &:first-child {
       .wrapper {
         @include media($mobile) {
           top: 70%;
