fix special-offers/photoshoot part

--- a/app/assets/sass/_pages/_special-offers.scss
+++ b/app/assets/sass/_pages/_special-offers.scss
@@ -87,6 +87,7 @@
     }
 
     .infos {
+      text-align: right;
       @include media($desktop) {
         position: absolute;top: 50%;
         @include transform(translateY(-50%));
