--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -2114,6 +2114,9 @@ footer div ul li a img {
     margin-right: 0;
   }
 }
+#content.special-offers section.photoshoots .infos {
+  text-align: right;
+}
 @media screen and (min-width: 480px) {
   #content.special-offers section.photoshoots .infos {
     position: absolute;
