home slider behavior css/js

--- a/app/assets/sass/_modules/_landing.scss
+++ b/app/assets/sass/_modules/_landing.scss
@@ -13,6 +13,21 @@
     max-width: none;
     max-height: 100vh;
   }
+  .img-wrap {
+    max-height: 100vh;
+    overflow: hidden;
+    img {
+      min-width: 0 !important;
+      max-width: 100vw;
+      min-height: 100vh;
+    }
+    .slick-dots {
+      display: block;
+      position: absolute;
+      top: 10rem;
+      z-index: 9999;
+    }
+  }
   .wrapper {
     position: $position;
     z-index: 9;
